Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- [OPTIM]: fixed abusive use of objectIds() in local voc lookup
- #1730: Calendar widget not working fine when language is Catalan
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Moved jscalendar lang/ subdir to calendar-lang/ to avoid name collisions.